# c_mysqlclient_test

./: CMakeLists.txt  main.c
